👼🔮 Checkpoint ./.glitch-assets:2209215/3003 ./index.html:2209215/1573 ./script.js:2209215/930 ./style.css:2209215/35

--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@ END Glitch hello-app default styles
 body {
   font-family: HK Grotesk;
   background-color: var(--color-bg);
+  padding-bottom: 4em;
 }
 
 /* Page structure */
