🎭🚴 Checkpoint ./index.html:2209215/31310 ./style.css:2209215/9033 ./TOOD.md:2209215/105

--- a/style.css
+++ b/style.css
@@ -193,7 +193,11 @@ h2 {
   border-bottom: 3px solid var(--color-secondary);
 }
 
-ul li img {
+figure img {
   display: block;
   max-height: 40vh;
+}
+
+canvas {
+  max-height: 80vh;
 }
